--- a/client/src/app/components/sections/publishers/add-publishers/add-publishers.component.html
+++ b/client/src/app/components/sections/publishers/add-publishers/add-publishers.component.html
@@ -90,26 +90,36 @@
             <div formGroupName="descriptions" *ngIf="section == 'descriptions_normal' ">
                 <h2>Descriptions</h2>
                 <div class="row mb-3">
-                    <label for="address" class="col-sm-2 col-form-label">English:</label>
+                    <label for="eng" class="col-sm-2 col-form-label">English:</label>
                     <div class="col-sm-10">
-                      <textarea class="form-control address" id="eng" formControlName="eng"></textarea>
+                      <textarea class="form-control" id="eng" formControlName="eng"></textarea>
                     </div>
                 </div>
                 <div class="row mb-3">
-                    <label for="address" class="col-sm-2 col-form-label">Polski:</label>
+                    <label for="pl" class="col-sm-2 col-form-label">Polski:</label>
                     <div class="col-sm-10">
-                      <textarea class="form-control address" id="pl" formControlName="pl"></textarea>
+                      <textarea class="form-control" id="pl" formControlName="pl"></textarea>
                     </div>
                 </div>
                 <div class="row mb-3">
-                    <label for="address" class="col-sm-2 col-form-label">Francuski:</label>
+                    <label for="fr" class="col-sm-2 col-form-label">Francuski:</label>
                     <div class="col-sm-10">
-                      <textarea class="form-control address" id="fr" formControlName="fr"></textarea>
+                      <textarea class="form-control" id="fr" formControlName="fr"></textarea>
                     </div>
                 </div>
             </div>
-            <div class="actions">
+            <div class="actions" *ngIf="section === 'general_information_normal'">
                 <button type="submit" class="btn btn-primary btn-lg w-100">Next</button>
+            </div>
+            <div class="actions" *ngIf="section === 'descriptions_normal'">
+                <div class="row mb-3">
+                    <div class="col-sm-6">
+                        <button type="button" class="btn btn-primary btn-lg w-100" (click)="showGeneralInformation()">General Information</button>
+                    </div>
+                    <div class="col-sm-6">
+                        <button type="submit" class="btn btn-primary btn-lg w-100" [disabled]="!checkErrors()" (click)="addPublisher()">Add</button>
+                    </div>
+                </div>
             </div>
         </div>
     </form>      
